fixed spacing on edit/delete icons

--- a/app/assets/stylesheets/games/_show.scss
+++ b/app/assets/stylesheets/games/_show.scss
@@ -34,7 +34,6 @@
     img{
       height: 25px !important;
       width: auto;
-      margin-top: 18px;
     }
   }
 }
@@ -49,6 +48,10 @@
   border-radius: 20px;
   h3{
     margin-bottom: 0px;
+  }
+  .edit-icon img{
+    margin-top: 18px;
+    margin-left: -4px;
   }
 }
 
